# asset_allocation_system

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
config/: agent.json  agent.template.json  batch_replay.template.json
config/satellite_agent/: .env.example  agent.json  agent.template.json  batch_replay.template.json  theme_reference.json
docs/: decision_logic.zh-CN.md  scoring_guide.zh-CN.md
docs/core_agent/: README.md
docs/satellite_agent/: HANDOFF.md  README.md  commands.zh-CN.md  decision_logic.zh-CN.md  design_principles.zh-CN.md  satellite_agent_flow.html  satellite_agent_flow.mmd  usage_guide.zh-CN.md
src/satellite_agent/: __init__.py  archive.py  config.py  cycle_audit.py  entry_exit.py  event_normalizer.py  indicators.py  llm.py  main.py  market_data.py  models.py  notifier.py  observability.py  outcomes.py  prewatch.py  reporting.py  runtime_config.py  scoring.py  service.py  sources.py  store.py  theme_linkage.py  timefmt.py
src/satellite_agent/decision_engines/: __init__.py  event.py  mappers.py  market.py  theme.py  types.py
tests/: test_cycle_audit.py  test_extractor.py  test_feed_sources.py  test_indicators.py  test_llm.py  test_market_data_sources.py  test_normalizer.py  test_notifier.py  test_observability.py  test_outcomes.py  test_prewatch.py  test_reporting.py  test_runtime_config.py  test_scoring_service.py  test_sec_source.py  test_service_dedup.py  test_source_health.py
tests/fixtures/: events.jsonl
